claude-exp: iteration 5
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>